platform/envoy-proxy/k8s/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: envoy-gateway-internal
  namespace: envoy-gateway-system
  annotations:
    gateway.envoyproxy.io/service-type: ClusterIP
spec:
  gatewayClassName: envoy-internal
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes.namespaces.from: All
---
# https://gateway.envoyproxy.io/contributions/design/security-policy/
# https://gateway.envoyproxy.io/docs/api/extension_types/#extauth
# https://gateway.envoyproxy.io/latest/tasks/security/ext-auth/
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: internal-gateway
  namespace: envoy-gateway-system # must be same as targetRefs' namesapce
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway-internal

  # primarily returns CORS header responses for preflight requests
  cors:
    allowOrigins:
      - "https://donation-app.local"
      - "https://api.donation-app.local"
    allowMethods:
      - GET
      - POST
      - OPTIONS
      - HEAD
      - PUT
      - DELETE
      - PATCH
      # - CONNECT
      # - TRACE
    allowHeaders:
      - Content-Type
      - Authorization
      - Accept
    maxAge: 1h # CORS changes are rare
    allowCredentials: true
    # exposeHeaders:
    #   - X-Custom-Header

---
# Generic allow SecurityPolicy of Gateway (envoy-gateway-system namespace) to Services (auth)
# https://gateway.envoyproxy.io/docs/api/extension_types/#securitypolicy
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-gateway
  namespace: auth # backend service
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: envoy-gateway-system
  to:
    # backend service
    - group: ""
      kind: Service
